# r2r

r2r/: Cargo.toml
r2r/src/: clocks.rs  nodes.rs  publishers.rs  subscribers.rs  time_source.rs
r2r_tracing/: Cargo.toml  build.rs
r2r_tracing/src/: callback.rs  lib.rs  r2r_tracepoints.rs  rclcpp_tracepoints.rs  tracetools_bindings.rs
